--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,138 @@
-# Prerequisites
-*.d
+# Created by https://www.gitignore.io/api/xcode
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# Edit at https://www.gitignore.io/?templates=xcode
 
-# Precompiled Headers
-*.gch
-*.pch
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
 
-# Fortran module files
-*.mod
-*.smod
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+### Xcode ###
 
-# Executables
-*.exe
-*.out
-*.app
+# Xcode
+
+#
+
+# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+
+
+
+
+## User settings
+
+xcuserdata/
+
+
+
+
+## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
+
+*.xcscmblueprint
+
+*.xccheckout
+
+
+
+
+## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
+
+build/
+
+DerivedData/
+
+*.moved-aside
+
+*.pbxuser
+
+!default.pbxuser
+
+*.mode1v3
+
+!default.mode1v3
+
+*.mode2v3
+
+!default.mode2v3
+
+*.perspectivev3
+
+!default.perspectivev3
+
+
+
+
+## Xcode Patch
+
+*.xcodeproj/*
+
+!*.xcodeproj/project.pbxproj
+
+!*.xcodeproj/xcshareddata/
+
+!*.xcworkspace/contents.xcworkspacedata
+
+/*.gcno
+
+
+
+
+### Xcode Patch ###
+
+**/xcshareddata/WorkspaceSettings.xcsettings
+
+
+
+
+# Xcode
+
+.DS_Store
+
+*/build/*
+
+*.pbxuser
+
+!default.pbxuser
+
+*.mode1v3
+
+!default.mode1v3
+
+*.mode2v3
+
+!default.mode2v3
+
+*.perspectivev3
+
+!default.perspectivev3
+
+xcuserdata
+
+profile
+
+*.moved-aside
+
+DerivedData
+
+.idea/
+
+*.hmap
+
+xcuserdata/*
+
+*xcworkspace/xcuserdata/*
+
+*/xcuserdata/*
+
+
+
+
+# End of https://www.gitignore.io/api/xcode
+
+
+
+
+
+
+
+### JUCE Ignores
+
+Builds/
+
